# force-manifold

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: ObjWriter.hpp  force-manifold.cpp  force-manifold.h  main.cpp
